fix(blog): hidden the overflow images of post card on hover

--- a/modules/blog/assets/hb/modules/blog/scss/post/_card.scss
+++ b/modules/blog/assets/hb/modules/blog/scss/post/_card.scss
@@ -1,7 +1,7 @@
 .hb-blog-post-card-img {
     height: 160px;
     object-fit: cover;
-    width: auto;
+    width: 100%;
     transition: 0.3s;
     border: 1px solid var(--#{$prefix}tertiary-bg);
 
